Grace/tests/gibbs/errors/t089.grace
// ERROR = P1023
print(42 : Number)
